Correct alignment of list items in nav and ingredients list

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 nav {
     justify-content: flex-end;
-    display: flex;
+    display: inline-flex;
 }
 
 nav ul {
@@ -21,11 +21,15 @@ nav ul {
     float: right;
 }
   
-li a {
-    display: block;
+nav li {
+    display: inline;
     padding: 8px;
     background-color: #dddddd;
   }
+
+ol {
+    display: block;
+}
 
 section {
     display: flex;
